//#################################################################################################
//
// Definition file for the personal workouts (0x00BEnnnn) files
//
//#################################################################################################

syntax = "proto2";

package tutorial;

option java_package         = "net.studioblueplanet.tomtomwatch";
option java_outer_classname = "WorkoutProto";


//#################################################################################################
// 1st level: root container
//#################################################################################################

message RootContainer
{
  optional Metadata             metadata          =7;
  optional DataContainer        dataContainer     =8;
}

//#################################################################################################
// 2nd level: metadata. Containing just two ints having the same value. Occurs often in one file
//#################################################################################################

message Metadata
{
  required fixed32              manufacturer      =1;  // always 0x1234DAEB
  required fixed32              fileType          =2;  // always 0x00090100 for 0x00BEnnnn
}

//#################################################################################################
// 2nd level: data container. Contains various types of data
//#################################################################################################

message DataContainer
{
  required SubDataContainer     subDataContainer  =1; 
}

//#################################################################################################
// 3rd level: sub data container
//#################################################################################################


message SubDataContainer
{
  repeated Description          description       =4;
  required Program              program           =7;
}


//#################################################################################################
// 4th level: descriptions used in the program
//#################################################################################################
message Description
{
  required int32                id                 =1;   // 0=workout name, 1=workout description, >=2 are stages referred to from the program
  required string               description        =2;   // Name/description of the workout/stage
}

//#################################################################################################
// 4th level: the program as list of steps
//#################################################################################################
message Program
{
  required int32                unknown2          =2;   // value 0
  required int32                unknown3          =3;   // value 0 or 1; only for run!?
  required bytes                unknown4          =4;   // 16 bytes
  required int32                Type              =10;  // 1: Fat burn, 2: Endurance, 3: Fitness, 4: Speed, 5: Power, 6: Custom 
  required int32                unknown11         =11;  // value 2
  repeated ProgramStep          step              =12;  // Steps that make up the workout
}

//#################################################################################################
// 5th level: Program step
//#################################################################################################
message ProgramStep
{
  required ProgramStepSub       stepSub           =8;
}

//#################################################################################################
// 6th level: Program step sub
//#################################################################################################
message ProgramStepSub
{
  required int32                stepName              =1;   // refers to a description ID (e.g. 'warm up', 'work')
  required int32                stepDescription       =2;   // refers to a description ID (e.g. 'Get into the Fat Burn HR zone')
  required int32                stepNumber            =4;   // 0, 1, 2, 3,...
  required int32                stepType              =6;   // 1: warm up, 2: work, 3: rest, 4: ?, 5: cool down
  optional Size                 stepSize              =7;   // Duration or distance (called Length by TomTom)
  optional Intensity            intensity             =8;   // Intensity goal (HR zone, pace, speed) of the step; optional

}

//#################################################################################################
// 7th level: Step size in terms of duration or distance
//#################################################################################################
message Size
{
  optional int32                duration                =1; // duration in second
  optional int32                distance                =2; // min 10000: distance in mm
  optional int32                reachZone               =4; // HR zone to reach: 1: Easy 2: Fat burn, 3: Cardio, 4: Perform, 5: Peak (intensity not used)
  optional int32                manual                  =5; // value is always 1
}

//#################################################################################################
// 7th level: Step intensity in heartrate zone or pace
//#################################################################################################
message Intensity
{
  optional int32                heartratezone           =1; // @HR Zone: 1: Easy 2: Fat burn, 3: Cardio, 4: Perform, 5: Peak
  optional int32                pace                    =2; // @pace in milliseconds per km e.g. 312000 = 5:12 min/km
  optional int32                speed                   =3; // @speed in mm/sec
}

//#################################################################################################
// ROOT level
//#################################################################################################

message Root
{
  repeated RootContainer        SubDataContainer             =1;
}